--- a/Social_App/Base.lproj/Main.storyboard
+++ b/Social_App/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="Social_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -26,10 +26,10 @@
                                     <constraint firstAttribute="height" constant="150" id="nH4-yH-4uP"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KIx-ye-g7W" customClass="MaterialView" customModule="Social_App" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KIx-ye-g7W" customClass="MaterialView" customModule="InstaClone" customModuleProvider="target">
                                 <rect key="frame" x="20" y="50" width="560" height="175"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6RV-B8-GnN" customClass="MaterialButton" customModule="Social_App" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6RV-B8-GnN" customClass="MaterialButton" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="187" y="65" width="187" height="45"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -51,22 +51,22 @@
                                     <constraint firstItem="6RV-B8-GnN" firstAttribute="centerY" secondItem="KIx-ye-g7W" secondAttribute="centerY" id="Ow8-l3-HGI"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bFS-83-bUo" customClass="MaterialView" customModule="Social_App" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bFS-83-bUo" customClass="MaterialView" customModule="InstaClone" customModuleProvider="target">
                                 <rect key="frame" x="20" y="245" width="560" height="335"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQh-Xl-uzM" customClass="materialTextField" customModule="Social_App" customModuleProvider="target">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eQh-Xl-uzM" customClass="materialTextField" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="8" y="35" width="544" height="30"/>
                                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Saf-1s-fAT" customClass="materialTextField" customModule="Social_App" customModuleProvider="target">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Saf-1s-fAT" customClass="materialTextField" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="8" y="85" width="544" height="30"/>
                                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7j-ET-zni" customClass="MaterialButton" customModule="Social_App" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7j-ET-zni" customClass="MaterialButton" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="187" y="155" width="187" height="45"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -122,7 +122,7 @@
         <!--FeedVC-->
         <scene sceneID="OOd-1I-Cpc">
             <objects>
-                <viewController id="Dyo-hm-uNu" customClass="FeedVC" customModule="Social_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Dyo-hm-uNu" customClass="FeedVC" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4vU-08-raL"/>
                         <viewControllerLayoutGuide type="bottom" id="b7R-x4-mhJ"/>
@@ -135,14 +135,14 @@
                                 <rect key="frame" x="20" y="0.0" width="560" height="551"/>
                                 <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="450" id="Q4u-Wi-K1D" customClass="PostCell" customModule="Social_App" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="450" id="Q4u-Wi-K1D" customClass="PostCell" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="560" height="450"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q4u-Wi-K1D" id="nGG-Qd-OHa">
                                             <rect key="frame" x="0.0" y="0.0" width="560" height="450"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f3e-Zx-aIY" customClass="MaterialView" customModule="Social_App" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f3e-Zx-aIY" customClass="MaterialView" customModule="InstaClone" customModuleProvider="target">
                                                     <rect key="frame" x="8" y="16" width="544" height="418"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="2Jb-DC-tzt">
@@ -273,7 +273,7 @@
         <!--ProfileVC-->
         <scene sceneID="yt7-wy-Cho">
             <objects>
-                <viewController id="M2E-Pe-3SH" customClass="ProfileVC" customModule="Social_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="M2E-Pe-3SH" customClass="ProfileVC" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Zy0-q9-pRY"/>
                         <viewControllerLayoutGuide type="bottom" id="iVB-sF-DLW"/>
@@ -301,7 +301,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="Y5V-pT-hS2" customClass="CollectionViewCell" customModule="Social_App" customModuleProvider="target">
+                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="Y5V-pT-hS2" customClass="CollectionViewCell" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -362,7 +362,7 @@
         <!--Add Image-->
         <scene sceneID="INK-TH-iwM">
             <objects>
-                <viewController id="cHE-5e-1V3" customClass="UploadVC" customModule="Social_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="cHE-5e-1V3" customClass="UploadVC" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uI9-nV-rra"/>
                         <viewControllerLayoutGuide type="bottom" id="LgP-i6-7Zw"/>
@@ -371,10 +371,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cdY-Yv-x9u" customClass="MaterialView" customModule="Social_App" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cdY-Yv-x9u" customClass="MaterialView" customModule="InstaClone" customModuleProvider="target">
                                 <rect key="frame" x="20" y="28" width="560" height="503"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iLz-Z6-n0r" customClass="materialTextField" customModule="Social_App" customModuleProvider="target">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iLz-Z6-n0r" customClass="materialTextField" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="155" y="308" width="250" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="nCn-Xu-3sN"/>
@@ -454,7 +454,7 @@
         <!--Profile-->
         <scene sceneID="PaB-bB-A5K">
             <objects>
-                <viewController id="XeW-2Q-Erl" customClass="PersonalProfileVC" customModule="Social_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XeW-2Q-Erl" customClass="PersonalProfileVC" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BgE-X6-ctw"/>
                         <viewControllerLayoutGuide type="bottom" id="SaI-XA-jYA"/>
@@ -489,7 +489,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gRG-mQ-Zmc" customClass="CollectionViewCell" customModule="Social_App" customModuleProvider="target">
+                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gRG-mQ-Zmc" customClass="CollectionViewCell" customModule="InstaClone" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -543,7 +543,7 @@
         <!--UsernameVC-->
         <scene sceneID="io1-5b-uhK">
             <objects>
-                <viewController id="0SD-ql-XpZ" customClass="UsernameVC" customModule="Social_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="0SD-ql-XpZ" customClass="UsernameVC" customModule="InstaClone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Gme-mt-PnV"/>
                         <viewControllerLayoutGuide type="bottom" id="UiP-Oz-MDQ"/>
